--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
   <h1>NIKHIL CHAUHAN </h1>
-  <img src="NIKHIL_PHOTO.png" height="100"/>
+  <img src="NIKHIL_PHOTO.png" height="100" alt="profile picture"/>
   
   <h2>OBJECTIVE</h2>
   <hr>
@@ -76,5 +76,9 @@ Computer Science Engineering specialization with (Artificial intelligence and Ma
     <li>Foundations of Artificial Intelligence</li>
     <li>Web Development Bootcamp</li>
   </ul>
+  <h2>OTHER</h2>
+  <hr>
+  <a href="permission.html">Contact Me</a>
+
 </body>
 </html>
